// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Banner search Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-banner-search"
  >
    <div
      class="ecl-banner-search__content"
    >
      <div
        class="ecl-banner-search__title"
      >
        Find your next role
      </div>
      <div
        class="ecl-banner-search__description ecl-content-color"
      >
        Discover job opportunities in the EU institutions
      </div>
      <form
        aria-describedby="banner-search-helper"
        class="ecl-banner-search__form"
        role="search"
      >
        <div
          class="ecl-banner-search__form-content"
        >
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--magnifying-glass ecl-icon ecl-icon--m ecl-banner-search__form-icon ecl-icon-phosphor--magnifying-glass"
          />
          <div
            class="ecl-form-group ecl-banner-search__form-group"
          >
            <label
              class="ecl-form-label ecl-form-label--hidden"
              for="banner-search-input-id"
              id="banner-search-input-id-label"
            >
              Enter a search keyword
            </label>
            <input
              class="ecl-text-input ecl-text-input--l ecl-banner-search__form-input"
              id="banner-search-input-id"
              name="banner-search-input-name"
              placeholder="Enter a search keyword"
              type="search"
            />
          </div>
          <button
            class="ecl-button ecl-button--primary ecl-button--m ecl-button--highlight ecl-banner-search__form-button"
            type="submit"
          >
            Search
          </button>
        </div>
        <div
          class="ecl-banner-search__form-helper"
          id="banner-search-helper"
        >
          Enter the job you're looking for
        </div>
      </form>
      <div
        class="ecl-banner-search__suggestion"
      >
        <span
          class="ecl-banner-search__suggestion-label"
          id="banner-search-suggestion-label"
        >
          Or explore:
        </span>
        <ul
          aria-labelledby="banner-search-suggestion-label"
          class="ecl-tag-set ecl-banner-search__suggestion-list"
        >
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Traineeships
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              IT & Digital
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Policy & Law
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Translation
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Communication
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Finance & Economics
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Banner search Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-banner-search"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-banner-search__content"
    >
      <div
        class="ecl-banner-search__title"
      >
        Find your next role
      </div>
      <div
        class="ecl-banner-search__description ecl-content-color"
      >
        Discover job opportunities in the EU institutions
      </div>
      <form
        aria-describedby="banner-search-helper"
        class="ecl-banner-search__form"
        role="search"
      >
        <div
          class="ecl-banner-search__form-content"
        >
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--magnifying-glass ecl-icon ecl-icon--m ecl-banner-search__form-icon ecl-icon-phosphor--magnifying-glass"
          />
          <div
            class="ecl-form-group ecl-banner-search__form-group"
          >
            <label
              class="ecl-form-label ecl-form-label--hidden"
              for="banner-search-input-id"
              id="banner-search-input-id-label"
            >
              Enter a search keyword
            </label>
            <input
              class="ecl-text-input ecl-text-input--l ecl-banner-search__form-input"
              id="banner-search-input-id"
              name="banner-search-input-name"
              placeholder="Enter a search keyword"
              type="search"
            />
          </div>
          <button
            class="ecl-button ecl-button--primary ecl-button--m ecl-button--highlight ecl-banner-search__form-button"
            type="submit"
          >
            Search
          </button>
        </div>
        <div
          class="ecl-banner-search__form-helper"
          id="banner-search-helper"
        >
          Enter the job you're looking for
        </div>
      </form>
      <div
        class="ecl-banner-search__suggestion"
      >
        <span
          class="ecl-banner-search__suggestion-label"
          id="banner-search-suggestion-label"
        >
          Or explore:
        </span>
        <ul
          aria-labelledby="banner-search-suggestion-label"
          class="ecl-tag-set ecl-banner-search__suggestion-list"
        >
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Traineeships
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              IT & Digital
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Policy & Law
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Translation
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Communication
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Finance & Economics
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Banner search Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-banner-search custom-class custom-class--test"
  >
    <div
      class="ecl-banner-search__content"
    >
      <div
        class="ecl-banner-search__title"
      >
        Find your next role
      </div>
      <div
        class="ecl-banner-search__description ecl-content-color"
      >
        Discover job opportunities in the EU institutions
      </div>
      <form
        aria-describedby="banner-search-helper"
        class="ecl-banner-search__form"
        role="search"
      >
        <div
          class="ecl-banner-search__form-content"
        >
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--magnifying-glass ecl-icon ecl-icon--m ecl-banner-search__form-icon ecl-icon-phosphor--magnifying-glass"
          />
          <div
            class="ecl-form-group ecl-banner-search__form-group"
          >
            <label
              class="ecl-form-label ecl-form-label--hidden"
              for="banner-search-input-id"
              id="banner-search-input-id-label"
            >
              Enter a search keyword
            </label>
            <input
              class="ecl-text-input ecl-text-input--l ecl-banner-search__form-input"
              id="banner-search-input-id"
              name="banner-search-input-name"
              placeholder="Enter a search keyword"
              type="search"
            />
          </div>
          <button
            class="ecl-button ecl-button--primary ecl-button--m ecl-button--highlight ecl-banner-search__form-button"
            type="submit"
          >
            Search
          </button>
        </div>
        <div
          class="ecl-banner-search__form-helper"
          id="banner-search-helper"
        >
          Enter the job you're looking for
        </div>
      </form>
      <div
        class="ecl-banner-search__suggestion"
      >
        <span
          class="ecl-banner-search__suggestion-label"
          id="banner-search-suggestion-label"
        >
          Or explore:
        </span>
        <ul
          aria-labelledby="banner-search-suggestion-label"
          class="ecl-tag-set ecl-banner-search__suggestion-list"
        >
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Traineeships
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              IT & Digital
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Policy & Law
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Translation
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Communication
            </a>
          </li>
          <li
            class="ecl-tag-set__item"
          >
            <a
              class="ecl-tag"
              href="/example"
            >
              Finance & Economics
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</jest>
`;
